# ffd

./: CMakeLists.txt  README.md
ffd/: array_access.h  bernstein.h  bezier_function.h  bezier_function_set.h  enumerations.h  static_size.h
image/: CMakeLists.txt  ffd_image.cpp  image.qrc
mesh_edit/: Button.qml  CMakeLists.txt  CoordinateInput.qml  Scene.qml  ctrl_points.cpp  ctrl_points.h  main.cpp  main.qml  qml.qrc  stl_mesh.cpp  stl_mesh.h  stl_mesh_geom.cpp  stl_mesh_geom.h
stl/: CMakeLists.txt  stl_import.cpp  stl_import.h
